# igrinsdr-helper

./: .gitignore  README.md  pyproject.toml
igrinsdr_helper/: cli.py  igrinsdr_tree.py
tests/: test_cli.py  test_ui_logic.py
