[tool.poetry]
name = "igrinsdr-helper"
version = "0.1.0"
description = "Helper module for igrinsdr"
authors = ["Jae-Joon Lee <lee.j.joon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ipytree = "^0.2.2"
textual = "^7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
igrinsdr-helper = "igrinsdr_helper.cli:main"


[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
